# zk-auth_poc

zkp-auth-chaum-pedersen/: .gitignore  Cargo.toml  build.rs
zkp-auth-chaum-pedersen/proto/: zkp_auth.proto
zkp-auth-chaum-pedersen/src/: client.rs  lib.rs  server.rs  zkp_auth.rs
